tooling/nargo_cli/tests/snapshots/execution_failure/immutable_ref_call_reads_store/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Failed to solve program: 'Failed to solve brillig function'
   ┌─ src/main.nr:19:5
   │
19 │     assert_eq(v1, 0);
   │     ----------------
   │
   = Call stack:
     1: main
             at src/main.nr:8:5
     2: foo
             at src/main.nr:13:5
     3: reader
             at src/main.nr:19:5

Failed to solve program: 'Failed to solve brillig function'
