tooling/nargo_cli/tests/snapshots/execution_failure/immutable_ref_call_reads_store/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
   ┌─ src/main.nr:19:15
   │
19 │     assert_eq(v1, 0);
   │               -----
   │
   = Call stack:
     1: ?
             at src/main.nr:6:4
     2: main
             at src/main.nr:8:5
     3: foo
             at src/main.nr:13:5

Error interpreting main function
